# gnalc

./: .clang-format  .clang-tidy  .clangd  .gdb_history  .gitignore  .gitmodules  BackEndOpt.md  CFG.md  CMakeLists.txt  Makefile  README.md  a.out  arm64-clang-toolchain.cmake  arm64-gcc-toolchain.cmake  fkir.ll  index.html  irgen  last_run.txt  printast  printir  show.ll  show.s  sylib.s  tasks.md  test.ll  test.ll_ll  test.ll_no_phi  test.llvm  test.s  test.ss
.github/workflows/: assemble-artifacts.yml  backend-fixedpoint.yml  backend-test.yml  backend_o1.yml  base.yml  compile-artifacts.yml  compile_artifacts.yml  evaluate-artifacts-backend.yml  evaluate-artifacts.yml  fixedpoint.yml  fuzz.yml  o1.yml  process-test-results.yml  process_test_results.yml  std.yml  test.yml  tests.yml
BackEnd/: Arm.cpp  Arm.hpp
css/: style.css
data/: environments.json  test-cases.json
data/educg-arm/: 21edfa5.json  25bbd33.json  319ab5d.json  480360f.json  678de68.json  81aa8cb.json  86f83cf.json  8de8cde.json  908a7fb.json  97479db.json  a2624d6.json  b45b6a2.json  b4d7197.json  b6a4987.json  b94d097.json  bab07f0.json  bdeb8f2.json  c09466e.json  ce0f1e1.json  dc3d7d6.json  ec19ec1.json  f2e143e.json  fe64a91.json  fe8e0d1.json  index.json
data/educg-riscv/: 0969c76.json  0edd4ed.json  480360f.json  5546171.json  5f861e9.json  678de68.json  7be44be.json  86f83cf.json  97479db.json  9a76547.json  bdeb8f2.json  dc3d7d6.json  f2e143e.json  index.json
data/example/: example_commit.json  example_index.json
data/local-arm/: 044b0dd.json  21edfa5.json  264eddb.json  30c20bb.json  319ab5d.json  383e3f9.json  41849af.json  43d3b51.json  4657bb8.json  480360f.json  4ba7e91.json  520a639.json  53a0be8.json  5af73c3.json  5f861e9.json  6099a04.json  6198897.json  6729c36.json  678de68.json  743ee05.json  83d6afa.json  8ad874f.json  8b28a16.json  8f0370e.json  9045d1a.json  9690c14.json  97479db.json  9e67795.json  a19bc7a.json  a2624d6.json  b45b6a2.json  b4e920b.json  b576a32.json  b94d097.json  bab07f0.json  bc90dd4.json  c60b7c5.json  ce0f1e1.json  dab7ee5.json  dc3d7d6.json  (+11 more)
debug/: asmgen.cpp  irgen.cpp  irprintertest.cpp  lexerdbg.c  lexmain.c  logtest.cpp  parserdbg.cpp  printast.cpp
docs/: ast.md  brainfuck.md  gnalc-test.md  irinst.md  optimization.md  overview.md  pi-docker.md  raspberry-pi-inside-docker.md  syntax.md  test-and-benchmark.md  testsuite-config.md  testsuite.md
educg/: educg_arm_driver.hpp  educg_driver.cpp  educg_riscv_driver.hpp  prepare_submission.py
educg/submit/: README.md  driver.cpp
include/: opt.hpp
include/codegen/: Arm.hpp
include/config/: config.hpp
include/constraint/: base.hpp  omega_test.hpp  parser.hpp
include/expr_solver/: expr.hpp  expr_match.hpp  expr_parser.hpp  expr_simplify.hpp
include/frontend/: ast.h
include/ggc/: irparser.hpp  irparsertool.hpp
include/graph/: domtree.hpp  graph.hpp
include/ir/: base.h  base.hpp  basic_block.hpp  block_utils.hpp  cfgbuilder.hpp  constant.hpp  constant_pool.hpp  constant_proxy.hpp  constantpool.hpp  formatter.hpp  function.h  function.hpp  global_var.h  global_var.hpp  instruction.h  instruction.hpp  irbuilder.hpp  match.hpp  maybenewtype.hpp  module.h  module.hpp  pattern_match.hpp  todo.md  type.h  type.hpp  type_alias.hpp  utilities.hpp  value.h  visitor.hpp
include/irbackup/: function.hpp
include/iropt/: live_analysis.hpp
include/irvisitors/: cfgbuilder.hpp  irprinter.hpp  namenormalizer.hpp  ssabuilder.hpp
include/legacy_mir/: base.hpp  basicblock.hpp  constpool.hpp  enum_name.hpp  function.hpp  instruction.hpp  misc.hpp  module.hpp  operand.hpp  tool.hpp  varpool.hpp
include/lexer/: datatype.h  token.h
include/match/: match.hpp
include/mir/: MIR.hpp  Target.hpp  base.hpp  basicblock.hpp  constpool.hpp  function.hpp  info.hpp  instruction.hpp  misc.hpp  module.hpp  operand.hpp  schedA53.hpp  strings.hpp  todo.md  tools.hpp  varpool.hpp
include/mir-old/: basicblock.hpp
include/mirA32/: basicblock.hpp  constpool.hpp  function.hpp
include/mirpasses/: lowering.hpp
include/mirtools/: enum_name.hpp  registeralloc.hpp  tool.hpp
include/mirtools-old/: enum_name.hpp  tool.hpp
include/mirtoolsA32/: enum_name.hpp  tool.hpp
include/parser/: ast.hpp  ast2.hpp  astprinter.hpp  (+10 more)
js/: main.js
lib/: parser.cpp  parser.hpp
runtime/: compile.py  compile.sh  thread.cpp
scripts/: cfg.py  diff_comparison.py  format.py  parse_report.py  prepare_submission.py  statistic.py  vectorizer_check.py
test/: 1-vardef.c  10-hello-world.c  3-funcdef.c  4-callexp.c  5-ifwhile.c  6-bug.c  7-complexcond.c  8-mixed.c  9-easy.c  CMakeLists.txt  Gperf.sh  benchmark.cpp  benchmark_registry.cpp  config.cpp  config.hpp  ghaction.cpp  ghaction_no_multithreading.cpp  gnalc_test  gnalc_test.cpp  gnalc_test.hpp  runner.cpp  test.cpp  timer.cpp
test/ASMperf/: Cargo.toml  build.sh
test/ASMperf/src/: main.rs
test/benchmark_result/: gnalc-mem2reg-sccp_vs_gnalc-mem2reg  gnalc-mem2reg_vs_clang-mem2reg  gnalc-mem2reg_vs_gnalc-O0
test/custom/: 0-ret.c  1-vardef.c  10-hello-world.c  11-ifwhile.c  12-ifwhile2.c  13-localarray.c  14-sccp.c  15-dce.c  16-tailcall.c  17-dse.c  18-m2g.c  19-gvnpre.c  2.c  20-reassociate.c  21-instsimplify.c  22-adce.c  23-inline.c  24-loadelim.c  25-loopanal.c  26-looprotate.c  27-lcssa.c  28-licm.c  29-loopunrolling.c  29-loopunrolling.gg  30-indvars.c  31-lsr.c  31-test.gg  32-ggctest.gg  32-ggctest.ll  33-loadelim2.c  34-loopelim.c  35-loadelim3.gg  36-dse2.c  37-internalize.c  38-vectorize.c  39-ifconv.c  4-callexp.c  42-deadcast.c  43-rng.c  49-rvbkd.c  (+8 more)
test/data/primary/: 0-ret.c  1-vardef.c  10-hello-world.c  10-hello_world.c  2.c  5-ifwhile.c  8-mixed.c  9-easy.c
test/gnalc_test_temp/2025-01-04_16:59:49/: 00_main.ll  sylib.ll
test/include/: benchmark_support.hpp  config.hpp  runner.hpp  utils.hpp
test/sylib/: sylib.c  sylib_with_gnalc_rt.cpp
tmp/: ast2.hpp  basetype.hpp  lexer.cpp  lexer.l  main.cpp  parser.cpp  parser.hpp  parser.y  visitor.cpp  visitor.hpp
tools/: parse_report.py  update-educg-final.py  update-educg-practice.py  update-educg.py
(+1395 files in other folders)
