cmake_minimum_required(VERSION 3.10)
project(gnalc)

set(CMAKE_CXX_STANDARD 17)
include_directories(../include)

add_executable(pass_benchmark benchmark.cpp)
add_executable(gnalc_test test.cpp)
add_test(NAME gnalc_test COMMAND gnalc_test)
add_test(NAME gnalc_test_o1 COMMAND gnalc_test -p -O1)
# passes
add_test(NAME gnalc_test_adce COMMAND gnalc_test -p --mem2reg -p --adce)
add_test(NAME gnalc_test_sccp COMMAND gnalc_test -p --mem2reg -p --sccp)
add_test(NAME gnalc_test_dce COMMAND gnalc_test -p --mem2reg -p --dce)
add_test(NAME gnalc_test_dse COMMAND gnalc_test -p --mem2reg -p --dse)
add_test(NAME gnalc_test_gvnpre COMMAND gnalc_test -p --mem2reg -p --gvnpre)
add_test(NAME gnalc_test_inline COMMAND gnalc_test -p --mem2reg -p --inline)
add_test(NAME gnalc_test_instsimplify COMMAND gnalc_test -p --mem2reg -p --instsimplify)
add_test(NAME gnalc_test_loadelim COMMAND gnalc_test -p --mem2reg -p --loadelim)
add_test(NAME gnalc_test_mem2reg COMMAND gnalc_test -p --mem2reg)
add_test(NAME gnalc_test_reassociate COMMAND gnalc_test -p --mem2reg -p --reassociate)
add_test(NAME gnalc_test_tailcall COMMAND gnalc_test -p --mem2reg -p --tailcall)
