cmake_minimum_required(VERSION 3.10)
project(gnalc)

set(CMAKE_CXX_STANDARD 17)
include_directories(../include)

add_executable(pass_benchmark benchmark.cpp)
add_executable(gnalc_test test.cpp)
add_test(NAME base COMMAND gnalc_test)
add_test(NAME o1 COMMAND gnalc_test -p -O1)
# passes
add_test(NAME adce COMMAND gnalc_test -p --mem2reg -p --adce)
add_test(NAME sccp COMMAND gnalc_test -p --mem2reg -p --sccp)
add_test(NAME dce COMMAND gnalc_test -p --mem2reg -p --dce)
add_test(NAME dse COMMAND gnalc_test -p --mem2reg -p --dse)
add_test(NAME gvnpre COMMAND gnalc_test -p --mem2reg -p --gvnpre)
add_test(NAME inline COMMAND gnalc_test -p --mem2reg -p --inline)
add_test(NAME instsimplify COMMAND gnalc_test -p --mem2reg -p --instsimplify)
add_test(NAME loadelim COMMAND gnalc_test -p --mem2reg -p --loadelim)
add_test(NAME mem2reg COMMAND gnalc_test -p --mem2reg)
add_test(NAME reassociate COMMAND gnalc_test -p --mem2reg -p --reassociate)
add_test(NAME tailcall COMMAND gnalc_test -p --mem2reg -p --tailcall)
